--- a/ARBeauty/Storyboards/Base.lproj/Main.storyboard
+++ b/ARBeauty/Storyboards/Base.lproj/Main.storyboard
@@ -261,6 +261,95 @@
             </objects>
             <point key="canvasLocation" x="2000.0000000000002" y="93.750000000000014"/>
         </scene>
+        <!--Photo View Controller-->
+        <scene sceneID="3EE-8a-jkU">
+            <objects>
+                <viewController storyboardIdentifier="PhotoViewController" id="zPd-9q-1Zd" customClass="PhotoViewController" customModule="ARBeauty" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="BxK-QK-4hi">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gca-iM-tXZ">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HMV-pB-HKY">
+                                        <rect key="frame" x="10" y="15.999999999999996" width="30" height="24.333333333333339"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="HMV-pB-HKY" secondAttribute="height" multiplier="1:1" id="8eb-ib-6Qs"/>
+                                            <constraint firstAttribute="height" constant="30" id="BpJ-TQ-jR9"/>
+                                        </constraints>
+                                        <state key="normal" backgroundImage="arrow.left" catalog="system">
+                                            <color key="titleColor" red="0.2756263316" green="0.307836622" blue="0.39608955379999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="backButtonTapped:" destination="zPd-9q-1Zd" eventType="touchUpInside" id="BA6-jW-DmF"/>
+                                        </connections>
+                                    </button>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="egm-X5-lMB">
+                                        <rect key="frame" x="334" y="13" width="70" height="30"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uym-f5-RE0">
+                                                <rect key="frame" x="0.0" y="-3.5527136788005009e-15" width="30" height="29.666666666666671"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="uym-f5-RE0" secondAttribute="height" multiplier="1:1" id="Dvl-tx-1OY"/>
+                                                    <constraint firstAttribute="height" constant="30" id="S4q-QO-0QM"/>
+                                                </constraints>
+                                                <state key="normal" backgroundImage="square.and.arrow.down" catalog="system"/>
+                                                <connections>
+                                                    <action selector="saveImageTapped:" destination="zPd-9q-1Zd" eventType="touchUpInside" id="AWS-DE-3d6"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lqi-Wv-0CX">
+                                                <rect key="frame" x="40" y="-1" width="30" height="30.666666666666668"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="Lqi-Wv-0CX" secondAttribute="height" multiplier="1:1" id="rxJ-Gk-B5j"/>
+                                                    <constraint firstAttribute="height" constant="30" id="sY3-Io-edt"/>
+                                                </constraints>
+                                                <state key="normal" backgroundImage="square.and.arrow.up" catalog="system"/>
+                                                <connections>
+                                                    <action selector="shareImageTapped:" destination="zPd-9q-1Zd" eventType="touchUpInside" id="wyf-hO-xw7"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="HMV-pB-HKY" firstAttribute="leading" secondItem="gca-iM-tXZ" secondAttribute="leading" constant="10" id="0NZ-iH-YFk"/>
+                                    <constraint firstItem="egm-X5-lMB" firstAttribute="centerY" secondItem="gca-iM-tXZ" secondAttribute="centerY" id="1JF-gl-54S"/>
+                                    <constraint firstAttribute="trailing" secondItem="egm-X5-lMB" secondAttribute="trailing" constant="10" id="940-tK-lZM"/>
+                                    <constraint firstAttribute="height" constant="56" id="hT8-pr-kFs"/>
+                                    <constraint firstItem="HMV-pB-HKY" firstAttribute="centerY" secondItem="gca-iM-tXZ" secondAttribute="centerY" id="kVK-GO-TDz"/>
+                                    <constraint firstItem="HMV-pB-HKY" firstAttribute="centerY" secondItem="gca-iM-tXZ" secondAttribute="centerY" id="lfr-ZH-lY7"/>
+                                </constraints>
+                            </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tl9-F6-sGa">
+                                <rect key="frame" x="0.0" y="56" width="414" height="680"/>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="AHU-uW-w7S"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="gca-iM-tXZ" firstAttribute="top" secondItem="AHU-uW-w7S" secondAttribute="top" id="1fk-bt-XvH"/>
+                            <constraint firstItem="AHU-uW-w7S" firstAttribute="bottom" secondItem="tl9-F6-sGa" secondAttribute="bottom" id="3dR-Y0-Tup"/>
+                            <constraint firstItem="gca-iM-tXZ" firstAttribute="leading" secondItem="AHU-uW-w7S" secondAttribute="leading" id="4UI-Ae-Bbz"/>
+                            <constraint firstItem="tl9-F6-sGa" firstAttribute="leading" secondItem="AHU-uW-w7S" secondAttribute="leading" id="FOi-dj-rB1"/>
+                            <constraint firstItem="tl9-F6-sGa" firstAttribute="top" secondItem="gca-iM-tXZ" secondAttribute="bottom" id="hsQ-Yf-nvJ"/>
+                            <constraint firstItem="AHU-uW-w7S" firstAttribute="trailing" secondItem="tl9-F6-sGa" secondAttribute="trailing" id="tPM-We-HEP"/>
+                            <constraint firstItem="AHU-uW-w7S" firstAttribute="trailing" secondItem="gca-iM-tXZ" secondAttribute="trailing" id="v6I-pW-58F"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="backButton" destination="HMV-pB-HKY" id="IA2-wE-QOm"/>
+                        <outlet property="photoImageView" destination="tl9-F6-sGa" id="nYJ-G9-MC0"/>
+                        <outlet property="saveImageButton" destination="uym-f5-RE0" id="msI-Gp-pRf"/>
+                        <outlet property="shareImageButton" destination="Lqi-Wv-0CX" id="dzX-u5-BxH"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2wl-Hk-nX1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2794.202898550725" y="102.71739130434783"/>
+        </scene>
         <!--Lips View Controller-->
         <scene sceneID="Azv-PB-glW">
             <objects>
@@ -358,6 +447,7 @@
     </scenes>
     <resources>
         <image name="arbeauty_logo" width="144" height="53.333332061767578"/>
+        <image name="arrow.left" catalog="system" width="128" height="98"/>
         <image name="background" width="640" height="1136"/>
         <image name="camera" width="512" height="512"/>
         <image name="gallery_icon" width="42.666667938232422" height="42.666667938232422"/>
@@ -367,6 +457,8 @@
         <image name="lips_icon" width="170.66667175292969" height="170.66667175292969"/>
         <image name="nail_icon" width="170.66667175292969" height="170.66667175292969"/>
         <image name="shoot_button_icon" width="170.66667175292969" height="170.66667175292969"/>
+        <image name="square.and.arrow.down" catalog="system" width="121" height="128"/>
+        <image name="square.and.arrow.up" catalog="system" width="115" height="128"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
