--- a/ARBeauty/Storyboards/Base.lproj/Main.storyboard
+++ b/ARBeauty/Storyboards/Base.lproj/Main.storyboard
@@ -278,6 +278,7 @@
                                             <constraint firstAttribute="width" secondItem="HMV-pB-HKY" secondAttribute="height" multiplier="1:1" id="8eb-ib-6Qs"/>
                                             <constraint firstAttribute="height" constant="30" id="BpJ-TQ-jR9"/>
                                         </constraints>
+                                        <color key="tintColor" red="0.2756263316" green="0.307836622" blue="0.39608955379999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <state key="normal" backgroundImage="arrow.left" catalog="system">
                                             <color key="titleColor" red="0.2756263316" green="0.307836622" blue="0.39608955379999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         </state>
@@ -294,6 +295,7 @@
                                                     <constraint firstAttribute="width" secondItem="uym-f5-RE0" secondAttribute="height" multiplier="1:1" id="Dvl-tx-1OY"/>
                                                     <constraint firstAttribute="height" constant="30" id="S4q-QO-0QM"/>
                                                 </constraints>
+                                                <color key="tintColor" red="0.2756263316" green="0.307836622" blue="0.39608955379999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <state key="normal" backgroundImage="square.and.arrow.down" catalog="system"/>
                                                 <connections>
                                                     <action selector="saveImageTapped:" destination="zPd-9q-1Zd" eventType="touchUpInside" id="AWS-DE-3d6"/>
@@ -305,6 +307,7 @@
                                                     <constraint firstAttribute="width" secondItem="Lqi-Wv-0CX" secondAttribute="height" multiplier="1:1" id="rxJ-Gk-B5j"/>
                                                     <constraint firstAttribute="height" constant="30" id="sY3-Io-edt"/>
                                                 </constraints>
+                                                <color key="tintColor" red="0.2756263316" green="0.307836622" blue="0.39608955379999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <state key="normal" backgroundImage="square.and.arrow.up" catalog="system"/>
                                                 <connections>
                                                     <action selector="shareImageTapped:" destination="zPd-9q-1Zd" eventType="touchUpInside" id="wyf-hO-xw7"/>
@@ -312,12 +315,24 @@
                                             </button>
                                         </subviews>
                                     </stackView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PHOTO" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rMF-od-zpq">
+                                        <rect key="frame" x="132" y="14.333333333333334" width="150" height="27.333333333333329"/>
+                                        <color key="tintColor" red="0.2756263316" green="0.307836622" blue="0.39608955379999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="150" id="KC1-Ah-9t1"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="Noteworthy-Bold" family="Noteworthy" pointSize="17"/>
+                                        <color key="textColor" red="0.2756263316" green="0.307836622" blue="0.39608955379999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstItem="HMV-pB-HKY" firstAttribute="leading" secondItem="gca-iM-tXZ" secondAttribute="leading" constant="10" id="0NZ-iH-YFk"/>
                                     <constraint firstItem="egm-X5-lMB" firstAttribute="centerY" secondItem="gca-iM-tXZ" secondAttribute="centerY" id="1JF-gl-54S"/>
                                     <constraint firstAttribute="trailing" secondItem="egm-X5-lMB" secondAttribute="trailing" constant="10" id="940-tK-lZM"/>
+                                    <constraint firstItem="rMF-od-zpq" firstAttribute="centerY" secondItem="gca-iM-tXZ" secondAttribute="centerY" id="Pkg-vm-C24"/>
+                                    <constraint firstItem="rMF-od-zpq" firstAttribute="centerX" secondItem="gca-iM-tXZ" secondAttribute="centerX" id="YfJ-6U-Jvf"/>
                                     <constraint firstAttribute="height" constant="56" id="hT8-pr-kFs"/>
                                     <constraint firstItem="HMV-pB-HKY" firstAttribute="centerY" secondItem="gca-iM-tXZ" secondAttribute="centerY" id="kVK-GO-TDz"/>
                                     <constraint firstItem="HMV-pB-HKY" firstAttribute="centerY" secondItem="gca-iM-tXZ" secondAttribute="centerY" id="lfr-ZH-lY7"/>
