--- a/ARBeauty/Storyboards/Base.lproj/Main.storyboard
+++ b/ARBeauty/Storyboards/Base.lproj/Main.storyboard
@@ -365,6 +365,47 @@
             </objects>
             <point key="canvasLocation" x="2794.202898550725" y="102.71739130434783"/>
         </scene>
+        <!--Scan View Controller-->
+        <scene sceneID="uuY-Uv-nST">
+            <objects>
+                <viewController storyboardIdentifier="ScanViewController" id="6l3-dr-tJO" customClass="ScanViewController" customModule="ARBeauty" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ei9-aW-F7O">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="axm-KQ-CH1">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="450-4504952_hand-outline-drawing-clip-art-hand-drawing-1240-1318-outline-hand-clipart.png" translatesAutoresizingMaskIntoConstraints="NO" id="mBt-bx-fTT">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="645"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </imageView>
+                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QKc-K9-pX2">
+                                        <rect key="frame" x="213" y="96" width="32" height="49"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" systemColor="systemTealColor"/>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Jv4-6k-ntf"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="axm-KQ-CH1" firstAttribute="top" secondItem="Jv4-6k-ntf" secondAttribute="top" id="N6O-Ci-KoV"/>
+                            <constraint firstItem="axm-KQ-CH1" firstAttribute="leading" secondItem="Jv4-6k-ntf" secondAttribute="leading" id="RjR-0x-QD8"/>
+                            <constraint firstItem="Jv4-6k-ntf" firstAttribute="trailing" secondItem="axm-KQ-CH1" secondAttribute="trailing" id="fpt-QH-vJN"/>
+                            <constraint firstItem="Jv4-6k-ntf" firstAttribute="bottom" secondItem="axm-KQ-CH1" secondAttribute="bottom" id="o4o-Q8-1fQ"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="cameraView" destination="mBt-bx-fTT" id="KJq-pd-Pr7"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qxc-ZK-WxO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1005.7971014492755" y="-761.41304347826087"/>
+        </scene>
         <!--Lips View Controller-->
         <scene sceneID="Azv-PB-glW">
             <objects>
@@ -461,6 +502,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="450-4504952_hand-outline-drawing-clip-art-hand-drawing-1240-1318-outline-hand-clipart.png" width="840" height="932"/>
         <image name="arbeauty_logo" width="144" height="53.333332061767578"/>
         <image name="arrow.left" catalog="system" width="128" height="98"/>
         <image name="background" width="640" height="1136"/>
@@ -476,6 +518,9 @@
         <image name="square.and.arrow.up" catalog="system" width="115" height="128"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemTealColor">
+            <color red="0.35294117647058826" green="0.78431372549019607" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
